fix emoticon mobile zoom and add output button href

--- a/public/input.css
+++ b/public/input.css
@@ -1,3 +1,7 @@
+a:visited{
+  color:white;
+}
+
 .effects {
   position: fixed;
   pointer-events: none;
